--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.xkcd": "^1.1.12",
     "d3": "^5.14.2",
     "parcel": "1.12.4",
     "parcel-plugin-inliner": "^1.0.10"
